syntax = "proto3";

package expense;

option go_package = "./expensepb";

message User{
    double balance = 1;
}

message Transaction{
    double amount = 1;
    string type = 2;
}

message Empty {}

service ExpenseService{
    rpc GetExpenseHistory(Empty) returns(stream Transaction) {}
    rpc GetBalance(Empty) returns(User) {}
    rpc AddExpense(Transaction) returns(Transaction) {}
}